--- a/index.html
+++ b/index.html
@@ -117,11 +117,15 @@
 
 	<div class="imgblock1">
 		<figure data-tag="web">
-			<img src="img/DCCA.jpg" alt="">
-			<figcaption><a href="https://s61227.github.io/DCCA/"></a>2012中華文創論壇網頁</figcaption>
+		    <a href="https://s61227.github.io/DCCA/">
+			    <img src="img/DCCA.jpg" alt="">
+			    <figcaption>2012中華文創論壇網頁</figcaption>
+			</a>
 		</figure>
 		<figure data-tag="web">
-			<img src="img/profile.JPG" alt=""><figcaption><a href="https://s61227.github.io/profile/"></a>My Profile</figcaption>
+		    <a href="https://s61227.github.io/profile/">
+			    <img src="img/profile.JPG" alt=""><figcaption>My Profile</figcaption>
+			</a>
 		</figure>
 	
 	</div>
