--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 
 	<div class="imgblock1">
 		<figure data-tag="web">
-		    <a href="https://s61227.github.io/DCCA/">
+		    <a target="_blank" href="https://s61227.github.io/DCCA/">
 			    <img src="img/DCCA.jpg" alt="">
 			    <figcaption>2012中華文創論壇網頁</figcaption>
 			</a>
 		</figure>
 		<figure data-tag="web">
-		    <a href="https://s61227.github.io/profile/">
+		    <a target="_blank" href="https://s61227.github.io/profile/">
 			    <img src="img/profile.JPG" alt=""><figcaption>My Profile</figcaption>
 			</a>
 		</figure>
