--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
 	<article class="aboutMe">
 		<h2>PROFILE</h2>
 		<img src="img/myphoto.jpg" alt="">
-		<p>「設計是用來解決問題」這是引導我進入設計領域的老師告訴我的第一句話，令我印象深刻。總認為設計是一種美的表現，然而從求學、工作中，逐漸深刻體認老師說的這句話。在學生時期，每次的作品評審總會詢問創作理念與解決的問題；在工作中，客戶更是時常詢問設計的概念、對於客戶的目標使用族群是否適合等問題。因為需求，所以設計，而「好的設計」更是解決了因需求而產生的問題。以人本設計為中心，剖析問題的根本，提供符合使用者體驗之設計，是我所嚮往的設計。</p>
-		<p>佳蓉畢業於國立臺北科技大學-互動媒體設計研究所，在學時期已參與教授許多的專案計劃與參加校外競賽之經驗，在團體中經常擔任專案管理的角色，掌控案子進度與團隊的溝通協調者。</p>
-		<p>投入職場後，不論是在網頁企劃或是互動設計之專案執行的職務，這一年多的工作經歷都讓我加深累積了專案管理與溝通協調等能力。在和設計師、工程師參與各種專案執行討論的同時，也讓我對介面設計時所需考量到的資訊架構、排版、使用者體驗設計等細節更有興趣。除了精進自己的介面設計知識外，也參加了一些前端網頁開發的課程，花時間磨練介面設計與前端程式能力，希望能依循這個計劃藍圖，以自己的「專案管理*介面設計*程式開發」的多樣化技能，成為獨當一面的網頁設計師。</p>
-		
+		<p>我是林佳蓉，畢業於國立臺北科技大學，主修互動媒體設計研究所。我專注於團隊的合作、溝通，以及專案開發的流程、模式。在學時期有參與教授許多的專案計劃，以及參加校外競賽之經驗，在團體中經常擔任專案管理的角色，掌控案子進度與團隊的溝通協調者。</p>
+		<p>投入職場後，不論是在網頁企劃或是互動設計之專案執行的職務，這些工作經歷都讓我加深累積了專案管理與溝通協調等能力。在和設計師、工程師執行各種專案時，藉此也接觸到企劃、設計及程式等相關事務，讓我有了更多元的學習機會。除了不斷精進自己的設計知識外，同時程式設計領域也有部分的涉略，並積極參加一些前端網頁開發的課程，花時間磨練介面設計與前端程式能力，期許自己未來能擁有「專案管理*介面設計*程式開發」的多樣化技能，能夠與工作夥伴們在跨領域中創造出不一樣的火花。</p>		
 	</article>
 </section>
 
@@ -86,7 +84,7 @@
 		<div class="timeline_block">
 			<div class="timepoint"></div>
 			<div class="timeline_content box">
-				<h3>在年底同時也應徵到「利穎科技股份有限公司」網頁助理一職，並於2015年3月進入公司上班</h3>
+				<h3>在年底同時也應徵到「利穎科技股份有限公司」網頁企劃一職，並於2015年3月進入公司上班</h3>
 				<p>工作內容大致上都是以規劃網頁為主，重新企劃並整合公司的官網與會員網站，同時也規劃公司即將成立的活動公司之官網。但因公司的人事部門調動，工作職務內容有所調整，比較沒辦法接觸到網頁設計的實務練習，所以選擇離職。雖然只待了短短兩個月，但也因為有這兩個月的工作經歷讓我對網頁規劃時所需考量到的資訊架構、排版、使用者體驗設計等細節更有興趣。</p>
 			</div>
 		</div>
@@ -96,12 +94,14 @@
 				<h3>在2015年5月底，應徵上「思維互動多媒體規劃設計公司」，擔任專案執行一職。</h3>
 				<p>負責專案之互動設計規劃、系統規劃、執行、進度追蹤，並與客戶、工程師、設計師溝通協調。</p>
 				<ul>
-				    <li>1. 專案執行之進程：使用甘特圖建立專案時程管理。</li>
-				    <li>2. 案執行之需求文件：<br>
-                        (1)表列出硬體設備之需求，或設計內容之資訊架構，清楚列出前置規劃。<br>
-                        (2)繪製軟體設計之流程架構，或視覺分鏡流程圖，增加與工程師、設計師的溝通之成效，加速專案進行。</li>
+				    <li>1. 專案提案簡報製作，提出符合客戶需求的互動設計規劃。</li>
+				    <li>2. 專案執行之需求文件：<br>
+                        (1)使用甘特圖建立專案時程管理，提供客戶、工程師、設計師執行進度之依據，即時監控專案進度。<br>
+                        (2)表列出硬體設備之需求，或設計內容之資訊架構，清楚列出前置規劃相關文件。<br>
+                        (3)繪製軟體設計之流程架構，或分鏡流程圖，增加與工程師、設計師的溝通成效，加速專案進行。 
+                        </li>
 				    <li>3. 軟硬體整合模擬測試：系統測試、使用者體驗測試。</li>
-				    <li>4. 專案之教育訓練：專案完成，撰寫使用手冊，提供客戶了解軟體的使用並有效維護設備。</li>
+				    <li>4. 專案之教育訓練：專案完成後，撰寫操作手冊，提供客戶了解軟硬體的使用與維護。</li>
 				</ul>
 			</div>
 		</div>
