--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
 	<script src="js/jquery.easing.1.3.js"></script>
 	<script src="js/main.js"></script>
 
+    <!-- Start of Smartsupp Live Chat script -->
+    <script type="text/javascript">
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = '1707d8c56137c30b1b49a2309429f7eb795eecdd';
+        window.smartsupp || (function (d) {
+            var s, c, o = smartsupp = function () {
+                o._.push(arguments)
+            };
+            o._ = [];
+            s = d.getElementsByTagName('script')[0];
+            c = d.createElement('script');
+            c.type = 'text/javascript';
+            c.charset = 'utf-8';
+            c.async = true;
+            c.src = '//www.smartsuppchat.com/loader.js?';
+            s.parentNode.insertBefore(c, s);
+        })(document);
+    </script>
 </head>
 <body>
 
