add social media
add social media

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             s.parentNode.insertBefore(c, s);
         })(document);
     </script>
+    
+    <!-- SumoMe -->
+    <script src="//load.sumome.com/" data-sumo-site-id="468bed63cc6fd9f021eb824512107388c9ccb03ecf04680db0e536e084ee0273" async="async"></script>
 </head>
 <body>
 
@@ -187,7 +190,6 @@
 			    <img src="img/project03.jpg" alt=""><figcaption>中央警察大學-刑事鑑識大樓展示室</figcaption>
 			</a>
 		</figure>
-		</figure>
 		<figure data-tag="project">
 		    <a target="_blank" href="https://drive.google.com/file/d/0B05Qs7GC1gqBeHAxNDFYUlpCTFk/view?usp=sharing">
 			    <img src="img/project04.jpg" alt=""><figcaption>台北101互動導覽機</figcaption>
@@ -223,8 +225,29 @@
 </section>
 
 
+
+<!-- section.page6區域 =============================================== -->
+<section class="page page6" id="Blog">
+    <h2>Blogger</h2>
+    <div class="Blog_Wrap">
+        <div class="Blog_leftSide">
+            <div class="Blog_article">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias pariatur aliquam adipisci. Fugiat, dolorem at nemo laboriosam ullam. Earum, reprehenderit illum vel. Non deleniti aliquid beatae, corporis optio aspernatur repellat quaerat, perferendis laborum sint consequatur quidem. Eligendi quaerat doloremque molestiae, doloribus tempora at eius dolorum soluta sunt aperiam quas voluptatum id eaque accusamus. Necessitatibus harum velit repudiandae rem labore illum sint, nisi, at enim cum perferendis et saepe dolorum vero eaque suscipit. Perferendis ullam non nisi. Sed consequuntur similique autem? Numquam amet a hic laudantium ut, doloremque iure nihil excepturi, eius suscipit, autem nesciunt error natus veritatis facere distinctio aperiam adipisci sequi, id. Non iste nihil ullam et omnis dolor magnam, veniam, nemo quibusdam itaque repellendus dignissimos, rem excepturi culpa iusto nam earum sint facere dolorum. Molestias consequuntur vel velit, ipsa temporibus voluptate. Dignissimos, impedit, magni. Ad, cum! Saepe officia, illum adipisci officiis molestias praesentium quaerat, pariatur earum. Eius architecto, tempore voluptatem cupiditate dolorem omnis repellat earum consectetur nihil sed, natus voluptatum mollitia illo error inventore autem rerum. Sint provident quibusdam fuga libero necessitatibus ab, error, non adipisci quisquam facere! Perspiciatis veniam nam modi laudantium architecto quam a eveniet excepturi, ipsa facere soluta vero obcaecati minus nostrum corporis. Itaque, blanditiis!</p>
+            </div>
+            <div class="shareIcon"></div>
+            <div class="Blog_message"></div>
+        </div>
+        <div class="Blog_rightSide">
+            <a class="twitter-timeline" href="https://twitter.com/iVideo_en">Tweets by iVideo_en</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+    </div>
+</section>
+
+
+
 <!-- footer ====================================================== -->
 <footer>©2016 Chia-Jung Lin All rights reserved.</footer>
 
 </body>
+
 </html>
