--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 			<h3>Please feel free to contact me at anytime.</h3>
 			<p><span><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></span>Zhonghe Dist., New Taipei City, Taiwan</p>
 			<p><span><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></span>s61227@hotmail.com </p>
-			<p><span><i class="fa fa-mobile fa-2x" aria-hidden="true"></i></span>+886 933217795</p>
+<!--			<p><span><i class="fa fa-mobile fa-2x" aria-hidden="true"></i></span>+886 933217795</p>-->
 		</div>
 		<div class="contactForm">
 			<form action="">
@@ -244,9 +244,11 @@
                 <div id="disqus_thread"></div>
             </div>
         </div>
+<!--
         <div class="Blog_rightSide">
             <a class="twitter-timeline" href="https://twitter.com/iVideo_en">Tweets by iVideo_en</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
+-->
     </div>
 </section>
 
